# Research-MoE

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ~$E Notes FINAL.docx  ~$E Notes copy.docx
.github/workflows/: ci.yml
Hybrid_Approaches/: BlackMamba_NOTES.docx  EvoMoE_NOTES.docx  MoE_meets_instruction_tuning_NOTES.docx
MoE_Efficiency/: MegaBlocks_NOTES.docx  PE_MoE_for_LMs_NOTES.docx  PE_SparsityCrafting_NOTES.docx  QMoE_NOTES.docx
MoE_Efficiency/FFFs/: FFFs_NOTES.docx
Routing_and_Architecture/: BASE_layers.docx  DeepSeekMoE_NOTES.docx  Expert_Choice_NOTES.docx  Soft_MoE_NOTES.docx
Understanding_MoE/: Sparsely_Gated_MoE.docx  Towards_Understanding_MoE_NOTES.docx
chatbot/: main.py
chatbot/services/: conversation.py  embedding.py  prompt.py  search.py
data_ingestion/: ingest_moe_corpus.ipynb  ingest_moe_corpus.py  ingestion.ipynb  ingestion.py  paper_names.py
research/: MoE Notes FINAL.docx  MoE Notes.docx  README.md
research/Hybrid_Approaches/: MoE_Mamba_NOTES.docx  Soft_Merging_of_Experts_NOTES.docx  Sparse_Upcycling_NOTES.docx
research/MoE_Efficiency/: FastInferenceMoE_NOTES.docx
research/Routing_and_Architecture/: DSelect_k_NOTES.docx  Hash_Layers_NOTES.docx  MixtureOfTokens_NOTES.docx  StableMoE_NOTES.docx
research/Scaling_and_Stability/: Efficient_Large_Scale_LM.docx  GLaM.docx  GShard.docx  ST_MoE.docx  Switch_Transformers.docx  Unified_Scaling_Laws.docx
research/TaskDomain_Level_MoE/: BTM_NOTES.docx  Benefits_of_ELMs_NOTES.docx  DEMix_NOTES.docx  Expert_Gate_NOTES.docx  (+2 more)
templates/: index.html
(+7 files in other folders)
